# vdsert

./: .gitignore  CHANGELOG.md  README.md  nb_opencv_demo.ipynb  pyproject.toml  release.config.js
.github/workflows/: python-semantic-release.yaml
tests/: test_vdsert.py
vdsert/: __init__.py
