[tool.poetry]
name = "vdsert"
version = "1.1.0"
description = "Sandbox python package"
authors = ["Evgenii Brovkin <evgenii@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
python-semantic-release = "^8.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
logging_use_named_masks = true
commit_parser = "angular"
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
major_on_zero = true
assets = []
build_command = """
    export POETRY_HOME=/opt/poetry
    curl -sSL https://install.python-poetry.org | POETRY_VERSION=1.5.1 python3 -
    $POETRY_HOME/bin/poetry build
"""
version_variables = ["vdsert/__init__.py:version"]
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor"]
minor_tags = ["feat"]
patch_tags = ["chore", "ci", "docs", "fix", "perf", "style", "refactor"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
token = { env = "GITHUB_TOKEN" }

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true