[tool.poetry]
name = "vdsert"
version = "1.1.0"
description = "Sandbox python package"
authors = ["Evgenii Brovkin <evgenii@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
python-semantic-release = "^8.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
