[tool.poetry]
name = "vdsert"
version = "2.0.0"
description = "Sandbox python package"
authors = ["Evgenii Brovkin <evgenii@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
structlog = "^23.2.0"
opencv-python = "^4.8.1.78"
notebook = "^7.0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
python-semantic-release = "^8.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
